src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_14_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "timeout_ms",
    },
    Assign,
    Integer {
        literal: 5,
    },
    SemiColon,
    Let,
    Identifier {
        literal: "timeout_ms_copy",
    },
    Assign,
    Identifier {
        literal: "timeout_ms",
    },
    SemiColon,
    EndOfFile,
]
