src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_14_syntax_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "timeout_ms",
            expression: Integer {
                literal: 5,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "timeout_ms_copy",
            expression: Identifier {
                identifier: "timeout_ms",
            },
        },
    },
]
