src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_15_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "is_directory": True,
            "is_file": False,
        },
        sub_environment: None,
    },
}
