src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_2_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "csv_content": String {
                value: "col_1\tcol_2\tcol_3\n",
            },
        },
        sub_environment: None,
    },
}
