src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_2_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "csv_content",
    },
    Assign,
    String {
        literal: "col_1\tcol_2\tcol_3\n",
    },
    SemiColon,
    EndOfFile,
]
